--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -20,3 +20,6 @@ dependencies:
   - name: kube-prometheus-stack
     version: 70.2.1
     repository: ""
+  - name: fibonacci-app
+    version: 0.1.0
+    repository: ""
