--- a/Helm/charts/serviceMonitor/templates/fibo-service-monitor.yaml
+++ b/Helm/charts/serviceMonitor/templates/fibo-service-monitor.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ .Release.Name }}-fibonacci-app
+  namespace: {{ .Values.monitorNamespace }}
   labels:
     app.kubernetes.io/name: fibonacci-app
     release: {{ $.Release.Name | quote }}
@@ -10,11 +11,13 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     helm.sh/chart: fibonacci-app-{{ .Chart.Version }}
 spec:
+  namespaceSelector:
+    matchNames:
+      - {{ .Release.Namespace }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: fibonacci-app
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      name: {{ .Release.Name }}-consumer
   endpoints:
-    - port: {{ .Release.Name }}-fibonacci-app
-      interval: 15s
-      path: /metrics
+  - port: metrics 
+    interval: 15s
+    path: /metrics
